--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,10 @@
-
+name: Hello World Workflow 
+on: [push]
+jobs: 
+  job_name: 
+    runs-on: ubuntu-latest
+    steps: 
+      - name: Checkout Code
+        uses: actions/checkout@v3
+      - name: Greeting Message
+        run: echo "Hello, world"
