--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,29 @@
-on: [push]
-name: Hello World Workflow 
-jobs: 
-  job_name: 
+on: 
+  issues: 
+    types: 
+      - opened
+      - reopened
+name: Access Issue Information      
+jobs:
+  access_issue_info:
     runs-on: ubuntu-latest
-    steps: 
-      - name: Checkout Code
+
+    steps:
+      # Step 1: Check out the repository
+      - name: Checkout Repository
         uses: actions/checkout@v3
-      - name: Greeting Message
-        run: echo "Hello, world"
+
+      # Step 2: Print Issue Information
+      - name: Print Issue Information
+        env:
+          ISSUE_NUMBER: ${{ github.event.issue.number }}
+          ISSUE_TITLE: ${{ github.event.issue.title }}
+          ISSUE_BODY: ${{ github.event.issue.body }}
+          ISSUE_ASSIGNEES: ${{ join(github.event.issue.assignees.*.login, ', ') }}
+          ISSUE_LABELS: ${{ join(github.event.issue.labels.*.name, ', ') }}
+        run: |
+          echo "Issue Number: ${ISSUE_NUMBER}"
+          echo "Issue Title: ${ISSUE_TITLE}"
+          echo "Issue Body: ${ISSUE_BODY}"
+          echo "Issue Assignees: ${ISSUE_ASSIGNEES}"
+          echo "Issue Labels: ${ISSUE_LABELS}"
