--- a/.github/workflows/generate-code.yml
+++ b/.github/workflows/generate-code.yml
@@ -6,7 +6,16 @@ jobs:
   auto-coder:
     runs-on: ubuntu-latest
     steps:
-      - if: containcontains(github.event.issue.labels.*.name, 'autocoder-bot')
+      - name: Check if issue has "autocoder-bot" label
+        id: check_label
+        run: |
+            labels=$(echo '${{ toJson(github.event.issue.labels) }}' | jq -r '.[] | .name')         
+            if echo "$labels" | grep -q 'autocoder-bot'; then            
+              echo "has_label=true" >> $GITHUB_ENV          
+            else            
+              echo "has_label=false" >> $GITHUB_ENV          
+            fi
+      - if: env.has_label == 'true'
         name: Generate Code with ChatGPT
         id: generate_code
         env:
@@ -16,15 +25,18 @@ jobs:
           ISSUE_NUMBER: ${{ github.event.issue.number }}
         run: chmod +x ./scripts/script.sh && ./scripts/script.sh ${{ env.GITHUB_TOKEN }} ${{env.REPOSITORY}} ${{env.ISSUE_NUMBER}} ${{ env.OPENAI_API_KEY }} > output.txt
       - name: Upload Artifact
+        if: env.has_label == 'true'
         uses: actions/upload-artifact@v3
         with: 
           name: autocoder-artifact
           path: output.txt
       - name: Download Artifact
+        if: env.has_label == 'true'
         uses: actions/download-artifact@v3
         with:
           name: autocoder-artifact
           path: autocoder-artifact
       - name: Display Generated Code using the ls command
+        if: env.has_label == 'true'
         run: ls -R autocoder-artifact
     # output code
