--- a/.github/workflows/generate-code.yml
+++ b/.github/workflows/generate-code.yml
@@ -25,7 +25,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           REPOSITORY: ${{ github.repository }}
           ISSUE_NUMBER: ${{ github.event.issue.number }}
-        run: ./scripts/script.sh ${{ env.GITHUB_TOKEN }} ${{env.REPOSITORY}} ${{env.ISSUE_NUMBER}} ${{ env.OPENAI_API_KEY }}
+        run: ./scripts/script.sh $GITHUB_TOKEN $REPOSITORY $ISSUE_NUMBER $OPENAI_API_KEY
       - name: Upload Artifact
         if: env.has_label == 'true'
         uses: actions/upload-artifact@v3
