--- a/.github/workflows/generate-code.yml
+++ b/.github/workflows/generate-code.yml
@@ -8,6 +8,8 @@ jobs:
     steps:
       - name: Checkout Repository        
         uses: actions/checkout@v3
+      - name: Set permissions for script.sh        
+        run: chmod +x scripts/script.sh
       - name: Check if issue has "autocoder-bot" label
         id: check_label
         run: |
@@ -25,7 +27,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           REPOSITORY: ${{ github.repository }}
           ISSUE_NUMBER: ${{ github.event.issue.number }}
-        run: chmod +x ./scripts/script.sh & ./scripts/script.sh $GITHUB_TOKEN $REPOSITORY $ISSUE_NUMBER $OPENAI_API_KEY
+        run: ./scripts/script.sh $GITHUB_TOKEN $REPOSITORY $ISSUE_NUMBER $OPENAI_API_KEY
       - name: Upload Artifact
         if: env.has_label == 'true'
         uses: actions/upload-artifact@v3
